# coreaudio-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
.github/workflows/: coreaudio-rs.yml
bindings/: Cargo.toml
bindings/src/: lib.rs
coreaudio/: index.html  sidebar-items.js
coreaudio/audio_unit/: enum.Element.html  enum.Scope.html  index.html  sidebar-items.js  struct.AudioUnit.html
coreaudio/audio_unit/audio_format/: enum.AudioFormat.html  enum.Mpeg4ObjectId.html  index.html  sidebar-items.js
coreaudio/audio_unit/render_callback/: index.html  sidebar-items.js  struct.Args.html  struct.InputProcFnWrapper.html  type.InputProcFn.html
coreaudio/audio_unit/sample_format/: enum.SampleFormat.html  index.html  sidebar-items.js  trait.Sample.html
coreaudio/audio_unit/stream_format/: index.html  sidebar-items.js  struct.StreamFormat.html
coreaudio/audio_unit/types/: enum.EffectType.html  enum.FormatConverterType.html  enum.GeneratorType.html  enum.IOType.html  enum.MixerType.html  enum.MusicDeviceType.html  enum.Type.html  index.html  sidebar-items.js
coreaudio/error/: enum.Error.html  index.html  sidebar-items.js
coreaudio/error/audio/: enum.Error.html  index.html
coreaudio/error/audio_codec/: enum.Error.html  index.html
coreaudio/error/audio_format/: enum.Error.html  index.html
coreaudio/error/audio_unit/: enum.Error.html  index.html
coreaudio_sys/: index.html  sidebar-items.js
coreaudio_sys/audio_unit/: constant.ACL_ADD_FILE.html  constant.ACL_ADD_SUBDIRECTORY.html  constant.ACL_APPEND_DATA.html  constant.ACL_CHANGE_OWNER.html  constant.ACL_DELETE.html  constant.ACL_DELETE_CHILD.html  constant.ACL_ENTRY_DIRECTORY_INHERIT.html  constant.ACL_ENTRY_FILE_INHERIT.html  constant.ACL_ENTRY_INHERITED.html  constant.ACL_ENTRY_LIMIT_INHERIT.html  constant.ACL_ENTRY_ONLY_INHERIT.html  constant.ACL_EXECUTE.html  constant.ACL_EXTENDED_ALLOW.html  constant.ACL_EXTENDED_DENY.html  constant.ACL_FIRST_ENTRY.html  constant.ACL_FLAG_DEFER_INHERIT.html  constant.ACL_FLAG_NO_INHERIT.html  constant.ACL_LAST_ENTRY.html  constant.ACL_LIST_DIRECTORY.html  constant.ACL_NEXT_ENTRY.html  constant.ACL_READ_ATTRIBUTES.html  constant.ACL_READ_DATA.html  constant.ACL_READ_EXTATTRIBUTES.html  constant.ACL_READ_SECURITY.html  constant.ACL_SEARCH.html  constant.ACL_SYNCHRONIZE.html  constant.ACL_TYPE_ACCESS.html  constant.ACL_TYPE_AFS.html  constant.ACL_TYPE_CODA.html  constant.ACL_TYPE_DEFAULT.html  constant.ACL_TYPE_EXTENDED.html  constant.ACL_TYPE_NTFS.html  constant.ACL_TYPE_NWFS.html  constant.ACL_UNDEFINED_TAG.html  constant.ACL_WRITE_ATTRIBUTES.html  constant.ACL_WRITE_DATA.html  constant.ACL_WRITE_EXTATTRIBUTES.html  constant.ACL_WRITE_SECURITY.html  constant.CFByteOrderBigEndian.html  constant.CFByteOrderLittleEndian.html  (+5018 more)
examples/: feedback.rs  feedback_interleaved.rs  sine.rs  sine_advanced.rs
examples/apple/: Cargo.toml  build_rust_deps.sh  rust-toolchain.toml
examples/apple/apple-src/: AppDelegate.m  Info-tvOS.plist
examples/apple/coreaudio-example.xcodeproj/: project.pbxproj
examples/apple/coreaudio-example.xcodeproj/project.xcworkspace/xcuserdata/simlay.xcuserdatad/: UserInterfaceState.xcuserstate
examples/apple/coreaudio-example.xcodeproj/xcshareddata/xcschemes/: coreaudio-ios-example.xcscheme  coreaudio-tvos-example.xcscheme  coreaudio-visionos-example.xcscheme
examples/apple/coreaudio-example.xcodeproj/xcuserdata/simlay.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/apple/coreaudio-ios-example.xcodeproj/: project.pbxproj
examples/apple/coreaudio-ios-example.xcodeproj/xcshareddata/xcschemes/: coreaudio-ios-example.xcscheme  coreaudio-tvos-example.xcscheme
examples/apple/src/: feedback.rs  lib.rs
examples/ios/: Cargo.toml  build_rust_deps.sh
examples/ios/coreaudio-ios-example.xcodeproj/: project.pbxproj
examples/ios/coreaudio-ios-example.xcodeproj/project.xcworkspace/xcuserdata/eugene.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/coreaudio-ios-example.xcodeproj/xcuserdata/eugene.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/ios/coreaudio-ios-example.xcodeproj/xcuserdata/mikeh.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/ios/ios-src/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
examples/ios/src/: feedback.rs  lib.rs
examples/tvos/: Cargo.toml  build_rust_deps.sh
examples/tvos/coreaudio-tvos-example.xcodeproj/: project.pbxproj
examples/tvos/src/: feedback.rs  lib.rs
examples/tvos/tvos-src/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CLOCAL.html  constant.CODESET.html  constant.CR0.html  constant.CR1.html  constant.CR2.html  constant.CR3.html  constant.CREAD.html  constant.CRNCYSTR.html  constant.CRTSCTS.html  constant.CS5.html  constant.CS6.html  constant.CS7.html  (+1157 more)
src/: audio_unit.rs  error.rs  lib.rs
src/audio_unit/: audio_format.rs  macos_helpers.rs  mod.rs  render_callback.rs  sample_format.rs  stream_format.rs  types.rs
src/bitflags/: lib.rs.html
src/coreaudio_sys/: audio_unit.rs.html  lib.rs.html
src/libc/: macros.rs.html
tests/: sine.rs
(+82 files in other folders)
