[package]

name = "coreaudio-rs"
version = "0.6.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>", "yupferris <jake@fusetools.com>"]
description = "A friendly rust interface for Apple's CoreAudio API."
keywords = ["core", "audio", "unit", "osx", "ios"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/RustAudio/coreaudio-rs.git"
homepage = "https://github.com/RustAudio/coreaudio-rs"

[lib]
name = "coreaudio"

[dependencies]
bitflags = "0.7"
coreaudio-sys = "0.1"
libc = "0.2"
