[package]
name = "coreaudio-ios-example"
version = "0.1.0"
authors = ["Michael Hills <mhills@gmail.com>"]
edition = "2018"

[lib]
name = "coreaudio_ios_example"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coreaudio-rs = { path = "../.." }

# TODO: remove this fix, once https://github.com/RustAudio/coreaudio-sys/pull/102 has been merged.
[patch.crates-io]
coreaudio-sys = { git = "https://github.com/eugenehp/coreaudio-sys.git", branch = "visionos" }
# coreaudio-sys = { path = "../../../coreaudio-sys" }